added second web component

--- a/angular12element/src/app/app.component.html
+++ b/angular12element/src/app/app.component.html
@@ -2,5 +2,5 @@
   this is my app. it includes the component as a normal angular component:
 </div>
 <div>
-  <app-componenta></app-componenta>
+  <app-componenta2></app-componenta2>
 </div>
