--- a/angular14app/src/app/app.component.html
+++ b/angular14app/src/app/app.component.html
@@ -3,6 +3,7 @@
 </div>
 <hr>
 <p>imported web component:</p>
-<div>
-  <component-a></component-a>
-</div>
+<div><component-a></component-a></div>
+
+<p>imported second web component:</p>
+<div><component-a2></component-a2></div>
